app/src/main/java/com/example/baseapplication/common/error/ErrorModel.java
package com.example.baseapplication.common.error;

public abstract class ErrorModel extends RuntimeException {
    private String message;
    private Throwable throwable;
}
